--- a/chat-app-backend/public/index.html
+++ b/chat-app-backend/public/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <h1>Socket Io</h1>
+    <button id="increment">+1</button>
 
+    <ul id="messages"></ul>
+    <form id="form" action="">
+      <input id="inputChat" autocomplete="off" /><button>Send</button>
+    </form>
+
+
+    <button id="send-location">Send Location</button>
     <script src="/socket.io/socket.io.js" ></script>
     <script src="/js/chat.js"></script>
 </body>
